Extract most of java-library.gradle to java-library-conventions.gradle.kts
Fixes #3446